[gd_scene load_steps=22 format=3 uid="uid://dop3vw5fgx8yq"]

[ext_resource type="Script" path="res://Scripts/Assassin.gd" id="1_v6a35"]
[ext_resource type="Texture2D" uid="uid://bxwp73iu876uj" path="res://Sprites/CharModel/dash_sprite1.png" id="2_6hy1s"]
[ext_resource type="Texture2D" uid="uid://csu0tiu78as1q" path="res://Sprites/CharModel/p1_spritesheet.png" id="2_vw43k"]
[ext_resource type="Script" path="res://Scripts/stateMachine.gd" id="3_gpd0y"]
[ext_resource type="Script" path="res://Scripts/IdleState.gd" id="4_7i5xq"]
[ext_resource type="Texture2D" uid="uid://00boagw4n6hq" path="res://Sprites/CharModel/wall_slide_sprite.png" id="4_ojrph"]
[ext_resource type="Script" path="res://Scripts/JumpState.gd" id="5_2aj23"]
[ext_resource type="Script" path="res://Scripts/MoveState.gd" id="5_luef7"]
[ext_resource type="Script" path="res://Scripts/FallState.gd" id="6_tjdfd"]
[ext_resource type="Script" path="res://Scripts/DashState.gd" id="9_kmmve"]
[ext_resource type="Script" path="res://Scripts/WallSlideState.gd" id="10_ll0vd"]
[ext_resource type="PackedScene" path="res://Scenes/alchemist.tscn" id="12_gs6s0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y0ae3"]
atlas = ExtResource("2_vw43k")
region = Rect2(72, 0, 72, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7ybk"]
atlas = ExtResource("2_vw43k")
region = Rect2(360, 0, 72, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0axsk"]
atlas = ExtResource("2_vw43k")
region = Rect2(0, 0, 72, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkllh"]
atlas = ExtResource("2_vw43k")
region = Rect2(72, 0, 72, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_322i4"]
atlas = ExtResource("2_vw43k")
region = Rect2(144, 0, 72, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8s34"]
atlas = ExtResource("2_vw43k")
region = Rect2(216, 0, 72, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jins"]
atlas = ExtResource("2_vw43k")
region = Rect2(288, 0, 72, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_mt71l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6hy1s")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0ae3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7ybk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0axsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkllh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_322i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8s34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jins")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ojrph")
}],
"loop": true,
"name": &"wall_slide",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppkxv"]
size = Vector2(43, 86)

[node name="mainPlayer" type="Node"]

[node name="Assassin" type="CharacterBody2D" parent="."]
script = ExtResource("1_v6a35")

[node name="Camera2D" type="Camera2D" parent="Assassin"]
position = Vector2(8, -173)

[node name="RayL" type="RayCast2D" parent="Assassin"]
z_index = 1
position = Vector2(-13, 0)
target_position = Vector2(-12, 0)

[node name="RayR" type="RayCast2D" parent="Assassin"]
z_index = 1
position = Vector2(18, 0)
target_position = Vector2(12, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Assassin"]
sprite_frames = SubResource("SpriteFrames_mt71l")
animation = &"walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Assassin"]
position = Vector2(2.5, 1)
shape = SubResource("RectangleShape2D_ppkxv")

[node name="slide_timer" type="Timer" parent="Assassin"]

[node name="stateMachine" type="Node" parent="Assassin" node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_gpd0y")
starting_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="Assassin/stateMachine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "dash_state", "wall_slide_state")]
script = ExtResource("4_7i5xq")
fall_state = NodePath("../FallState")
jump_state = NodePath("../JumpState")
move_state = NodePath("../MoveState")
dash_state = NodePath("../DashState")
wall_slide_state = NodePath("../WallSlideState")

[node name="MoveState" type="Node" parent="Assassin/stateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state", "dash_state", "wall_slide_state")]
script = ExtResource("5_luef7")
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")
jump_state = NodePath("../JumpState")
dash_state = NodePath("../DashState")
wall_slide_state = NodePath("../WallSlideState")

[node name="JumpState" type="Node" parent="Assassin/stateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state", "dash_state", "wall_slide_state")]
script = ExtResource("5_2aj23")
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
dash_state = NodePath("../DashState")
wall_slide_state = NodePath("../WallSlideState")

[node name="FallState" type="Node" parent="Assassin/stateMachine" node_paths=PackedStringArray("jump_state", "idle_state", "move_state", "dash_state", "wall_slide_state")]
script = ExtResource("6_tjdfd")
jump_state = NodePath("../JumpState")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
dash_state = NodePath("../DashState")
wall_slide_state = NodePath("../WallSlideState")

[node name="DashState" type="Node" parent="Assassin/stateMachine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state", "jump_state", "wall_slide_state")]
script = ExtResource("9_kmmve")
fall_state = NodePath("../FallState")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
jump_state = NodePath("../JumpState")
wall_slide_state = NodePath("../WallSlideState")

[node name="DashTimer" type="Timer" parent="Assassin/stateMachine/DashState"]
wait_time = 0.1
one_shot = true

[node name="WallSlideState" type="Node" parent="Assassin/stateMachine" node_paths=PackedStringArray("jump_state", "idle_state", "move_state", "dash_state", "fall_state")]
script = ExtResource("10_ll0vd")
jump_state = NodePath("../JumpState")
idle_state = NodePath("../IdleState")
move_state = NodePath("../MoveState")
dash_state = NodePath("../DashState")
fall_state = NodePath("../FallState")

[node name="Alchemist" parent="." instance=ExtResource("12_gs6s0")]

[connection signal="timeout" from="Assassin/slide_timer" to="." method="_on_slide_timer_timeout"]
